# workshop-gdl

./: .gitignore  file.txt  file1.txt
workshop/CreditManager/: .project  pom.xml
workshop/CreditManager/src/main/java/com/recluit/lab/action/: BookAction.java  LoanAction.java
workshop/CreditManager/src/main/java/com/recluit/lab/restclient/: BookRestClient.java  HelloClient.java  LoanRestClient.java
workshop/CreditManager/src/main/resources/: struts.xml
workshop/CreditManager/src/main/webapp/: add.jsp  books.jsp  close.jsp  closed.jsp  establish.jsp  index.jsp  not_found.jsp  reject.jsp  search.jsp
workshop/CreditManager/src/main/webapp/WEB-INF/: web.xml
workshop/RESTServer/: .classpath  .project  pom.xml
workshop/RESTServer/src/main/java/com/recluit/lab/model/: Book.java  BookStore.java
workshop/RESTServer/src/main/java/com/recluit/lab/restservices/: BookService.java  ClientSockect.java  LoanService.java  MessageService.java
workshop/RESTServer/src/main/webapp/: index.jsp
workshop/RESTServer/src/main/webapp/WEB-INF/: web.xml
workshop/communication-adapter/src/main/java/com/recluit/workshop/communication/adapter/: ClientSockectExample.java  CommunicationAdapterLauncher.java  IListener.java  MessageListener.java  SocketConnection.java  StringUtils.java
workshop/communication-adapter/src/main/resources/: logback.xml
workshop/credit-bureau/src/c/: CMakeLists.txt  cb.c
workshop/credit-manager/src/main/java/com/recluit/workshop/creditmanager/: LoanAction.java
workshop/credit-manager/src/main/webapp/: index.jsp  search.jsp
(+2 files in other folders)
